making puzzle pieces

--- a/imageAnim.html
+++ b/imageAnim.html
@@ -8,8 +8,8 @@
 </head>
 <body>
 	<header id="headLine">
-		<h1>headline</h1>
-		<p>subhead</p>
+		<h1>simple actions with Java</h1>
+		<p>drag and drop puzzle pieces below!</p>
 	</header>
 	<section id="game-boards">
 		<div class="puzzle-pieces"></div>
@@ -20,10 +20,10 @@
 	<footer>
 		<p>click thumb to change pieces!</p>
 		<nav id="buttonHolder">
-			<img src="images/buttonZero.jpg" alt="thumbnail">
-			<img src="images/buttonOne.jpg" alt="thumbnail">
-	    <img src="images/buttonTwo.jpg" alt="thumbnail">
-			<img src="images/buttonThree.jpg" alt="thumbnail">
+			<img data-puzzleref="0" src="images/buttonZero.jpg" alt="thumbnail">
+			<img data-puzzleref="1" src="images/buttonOne.jpg" alt="thumbnail">
+	    	<img data-puzzleref="2" src="images/buttonTwo.jpg" alt="thumbnail">
+			<img data-puzzleref="3" src="images/buttonThree.jpg" alt="thumbnail">
 		</nav>
 	</footer>
 
