drag and drop example

--- a/imageAnim.html
+++ b/imageAnim.html
@@ -12,8 +12,14 @@
 		<p>drag and drop puzzle pieces below!</p>
 	</header>
 	<section id="game-boards">
-		<div class="puzzle-pieces"></div>
-		<div class="puzzle-board"></div>
+		<div class="puzzle-pieces"></div> <!-- this is the drag area  -->
+		<div class="puzzle-board">
+			<div class="drop-zone tl"></div>
+			<div class="drop-zone tr"></div>
+			<div class="drop-zone bl"></div>
+			<div class="drop-zone br"></div>
+		</div>
+			<!-- Short cut to make list === div.drop-zone*4 -->
 	</section>
 	<!-- <section id="wrapper" class="commonSettings"></section> -->
 
